--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,17 @@
+<br>
+<br>
+
+
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
+
+   <div class="form-group has-icon">
+        <label class="control-label sr-only" for="inputName">Name</label>
+        <%= f.text_field :name, autofocus: true, class:"form-control", id:"inputName", placeholder:"名前"%>
+        <span class="fa fa-user form-control-icon" aria-hidden="true"></span>
+    </div>
 
   <div class="field">
     <%= f.label :email %><br />
@@ -22,7 +32,7 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Sign up" ,class:"btn btn-success" %>
   </div>
 <% end %>
 
