あとはbootstrapで綺麗に修正

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -5,7 +5,7 @@
     </div>
     <div class="col-xs-9">
       <h3>Bookers</h3>
-      <table class="table">
+      <table class="table table-striped">
         <thead>
           <tr>
             <th></th>
