--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -6,7 +6,7 @@
 
 		<div class="col-xs-9">
 			<h3>Booke detail</h3>
-			<table class="table">
+			<table class="table table-striped">
 				<tbody>
 					<tr>
 					<td>
