--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -5,7 +5,7 @@
         <h1>
           welcome to
           <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
-          Bookers !!
+          <strong>Bookers</strong> !!
         </h1>
       </div>
     </div>
