--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,7 +23,9 @@
         <% @books.each do |book| %>
           <tr>
             <td>
-              <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, class: "img-circle pull-left profile-thumb", fallback: "no_image.jpg"%></td>
+              <%= link_to  user_path(@user.id) do %>
+                <%= attachment_image_tag @user, :profile_image, class: "img-circle pull-left profile-thumb", fallback: "no_image.jpg", size: "60x60" %>
+              <% end %>
             <td>
               <%= link_to book.title, book_path(book) %>
             </td>
