--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -21,14 +21,8 @@
 
 <h2>New book</h2>
 
-<% if book.errors.any? %>
-        <%= book.errors.count %>件のerrorが発生しました
-        <% book.errors.full_messages.each do |message| %>
-            <%= message %>
-        <% end %>
-<% end %>
-
 <%= form_for(book) do |f| %>
+  <%#= render 'devise/shared/error_messages', model: f.object %>
   <div class="field row">
     <h4>Title</h4>
     <%= f.text_field :title, class: "col-xs-12 book_title"%>
