--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,15 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-3">
+    <% if @book.errors.any? %>
+      <%= @book.errors.count %>件のerrorが発生しました
+      <% @book.errors.full_messages.each do |message| %>
+        <%= message %>
+      <% end %>
+    <% end %>
+   </div>
+  <div class="row">
+
+  <div class="col-xs-3">
       <%= render 'books/list', book: @book, user: @user %>
     </div>
     <div class="col-xs-9">
