Fix & Add link_to 画像

--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -24,12 +24,11 @@
 <%= form_for(@book) do |f| %>
   <%#= render 'devise/shared/error_messages', model: f.object %>
   <div class="field row">
-    <h4>Title</h4>
+    <%= f.label :title %>
     <%= f.text_field :title, class: "col-xs-12 book_title"%>
   </div>
   <div class="field row">
-    <h4>Opinion</h4>
-
+    <%= f.label :option %>
     <%= f.text_area :body, class: "col-xs-12 book_body" %>
     <br>
   </div>
