--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,7 +5,7 @@
 		</div>
 
 		<div class="col-xs-9">
-			<h3>Booke detail</h3>
+			<h3>Book detail</h3>
 			<table class="table table-striped">
 				<tbody>
 					<tr>
