--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -27,7 +27,7 @@
           <% @books.each do |book| %>
             <tr>
               <td>
-                <a><%= attachment_image_tag @user, :profile_image, class: "img-circle pull-left profile-thumb", fallback: "no_image.jpg", size: "60x60" %></a>
+                <a><%= link_to(attachment_image_tag(book.user, :profile_image, class: "img-circle pull-left profile-thumb", fallback: "no_image.jpg", size: "60x60"), book_path(book.id))  %></a>
               </td>
               <td>
                 <%= link_to book.title, book_path(book.id) %>
